--- a/assets/languages/pt/Options.xml
+++ b/assets/languages/pt/Options.xml
@@ -228,6 +228,12 @@
 
     	<str id="screenTimeOut-name">Permitir Tempo Limite de Tela</str>
     	<str id="screenTimeOut-desc">Se marcado, o celular entrará em modo soneca caso o jogador fique inativo.</str>
+
+		<str id="useExternal-name">Usar Pasta EXTERNA</str>
+		<str id="useExternal-desc">Se marcado, a Engine vai usar .CodenameEngine para a pasta de mods e addons.</str>
+
+		<str id="storageTypeChange-title">Aviso: Tipo De Armazenamento Foi Mudado!</str>
+		<str id="storageTypeChange-body">O Tipo de Armazenamento Mudou.\nUm restart é necessário para que está ação tenha efeito.\nQualquer mod instalado antes terão que ser movidos manualmente para a nova pasta do Tipo de Armazenamento após esse restart.\n\nPressione OK para resetar o jogo e aplicar as mudanças.</str>
 	</group>
 
 </language>
