mama mia, we got italian translations

--- a/assets/languages/it/Options.xml
+++ b/assets/languages/it/Options.xml
@@ -26,6 +26,9 @@
 
 		<str id="optionsTree.debug-name">Opzioni di Debug</str>
 		<str id="optionsTree.debug-desc">Opzioni di Debug per la Modalità Sviluppatore.</str>
+
+		<str id="optionsTree.mobile-name">Opzioni Telefono</str>
+		<str id="optionsTree.mobile-desc">Cambia impostazioni riguardo al Telefono o ai Controlli Touch.</str>
 	</group>
 
 	<group name="KeybindOptions" prefix="KeybindsOptions.">
@@ -198,5 +201,37 @@
 
 		<str id="songOffsetAffectEditors-name">Offset Editor Chart</str>
 		<str id="songOffsetAffectEditors-desc">Se abilitato, questo attiverà l'opzione Offset Canzone anche nel Editor Chart.</str>
+	</group>
+
+	<group name="MobileOptions" prefix="MobileOptions.">
+		<str id="optionsTree.mobile-name">Impostazioni Telefono</str>
+		<str id="optionsTree.mobile-desc">Cambia Impostazioni riguardo al Telefono o ai Controlli Touch.</str>
+
+		<str id="extraHints-name">Suggerimenti Extra</str>
+		<str id="extraHints-desc">Seleziona quanti suggerimenti extra preferisci avere su hitbox.</str>
+
+		<str id="hitboxAlpha-name">Opacità Hitbox</str>
+		<str id="hitboxAlpha-desc">Cambia quanto opaca l'Hitbox dovrebbe essere.</str>
+
+		<str id="oldPadTexture-name">Usa la Vecchia Texture del Pad</str>
+		<str id="oldPadTexture-desc">Se selezionato, il TouchPad userà la vecchia texture che usava prima.</str>
+
+		<str id="touchPadAlpha-name">Opacità TouchPad</str>
+		<str id="touchPadAlpha-desc">Cambia quanto opaco il TouchPad dovrebbe essere.</str>
+
+		<str id="hitboxType-name">Aspetto dell'Hitbox</str>
+		<str id="hitboxType-desc">Scegli come la tua Hitbox dovrebbe essere!</str>
+
+		<str id="hitboxPos-name">Posizione dell'Hitbox</str>
+		<str id="hitboxPos-desc">Se selezionato, l'Hitbox sarà messo in fondo lo schermo, altrimenti starà sopra.</str>
+
+		<str id="screenTimeOut-name">Permetti il Timeout dello Schermo</str>
+		<str id="screenTimeOut-desc">Se selezionato, il telefono entrerà in modalità riposo quando il giocatore è inattivo.</str>
+
+		<str id="useExternal-name">Usa la cartella EXTERNAL</str>
+		<str id="useExternal-desc">Se selezionato, il motore utilizzerà .CodenameEngine per le cartelle delle Mod e delle Aggiunte.</str>
+
+		<str id="storageTypeChange-title">Attenzione: Il Tipo di Archiviazione è Stato Cambiato!</str>
+		<str id="storageTypeChange-body">Il Tipo di Archiviazione è stato cambiato.\nIl riavvio è richiesto in modo tale che il cambio abbia effetto.\nQualsiasi mod installata precedentemente dovrà essere spostata manualmente nel nuovo percorso del Tipo di Archiviazione dopo questo riavvio.\n\nPremi OK per resettare il gioco e applicare i cambi.</str>
 	</group>
 </language>
