--- a/assets/languages/id/Main.xml
+++ b/assets/languages/id/Main.xml
@@ -44,17 +44,17 @@
 			<str id="pause.restartCutscene">Memuat Ulang Cutscene</str>
 		</group>
 
-		<str id="pause.deathCounter">Anu Birunya: {0}</str>
+		<str id="pause.deathCounter">Anu Bola Birunya: {0}</str>
 		<str id="pause.coopMode">DUA DUANYA</str>
 		<str id="pause.opponentMode"> MODE MUSUH</str>
 	</group>
 
 	<group name="Credits">
 		<group name="CreditsCodename">
-			<str id="credits.mainDev" notrim="true"> *- Public member of the main Devs!*</str>
-			<str id="credits.totalContributions">Total Contributions: ~{0}~ / *{1}* (~{2}%~) - Select to open GitHub account</str>
-			<str id="credits.downloadingList">Downloading List...</str>
-			<str id="credits.allContributors">All the contributors of the engine! - Press RESET to update the list (One reset per 2 minutes).</str>
+			<str id="credits.mainDev" notrim="true"> *- Publik member untuk main Devs!*</str>
+			<str id="credits.totalContributions">Total Kontribusi: ~{0}~ / *{1}* (~{2}%~) - Pilih Untuk Membuka Akun Github</str>
+			<str id="credits.downloadingList">Mendownload List...</str>
+			<str id="credits.allContributors">Semua kontribusi dari engine ini! - Tekan RESET untuk update mengupdate listnya (Satu kali reset per 2 menit).</str>
 		</group>
 		<group name="CreditsMain">
 			<str id="credits.name">Kredits</str>
@@ -69,7 +69,7 @@
 	</group>
 
 	<group name="MainMenu">
-		<str id="mainMenu.commit">Kode Komit: {0} ({1})</str>
+		<str id="mainMenu.commit">Kode Commint: {0} ({1})</str>
 		<str id="mainMenu.openMods">[{0}] Buka Mods Folder Menu</str>
 	</group>
 
